--- a/urdu.html
+++ b/urdu.html
@@ -2,111 +2,159 @@
 <html lang="ur" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>کائناتی دباؤ اور گھیراؤ</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Noto Naskh Arabic', serif;
+      background: linear-gradient(to bottom, #f3f3f3, #e6f0ff);
+      color: #222;
+      line-height: 1.8;
+      margin: 0;
+      padding: 0 1rem;
+    }
+    header {
+      background-color: #004080;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav a {
+      color: #ffffff;
+      margin: 0 0.5rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      background-color: #ffffff;
+      padding: 2rem;
+      margin: 1rem auto;
+      max-width: 900px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      border-radius: 8px;
+    }
+    h1, h2 {
+      color: #003366;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+    ol, ul {
+      padding-right: 1.5rem;
+    }
+    li {
+      margin-bottom: 0.7rem;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <a href="index.html">English</a> |
-    <a href="urdu.html">اردو</a> |
-    <a href="arabic.html">العربية</a> |
-    <a href="argument.html">Scientific Argument</a> |
-    <a href="urdu-argument.html">دلائل (اردو)</a>
-  </header>
-
-  <main>
-    <h1>کائناتی دباؤ اور گھیراؤ: ایک نظریاتی خاکہ</h1>
-    <p><strong>تحریر:</strong> عثمان مدنی<br>
-    <strong>ای میل:</strong> madniusman13@gmail.com<br>
-    <strong>© 2025 عثمان مدنی۔ جملہ حقوق محفوظ ہیں۔</strong></p>
-
-    <h2>خلاصہ</h2>
-    <p>یہ مقالہ کائناتی دباؤ اور گھیراؤ (CPC) نظریہ پیش کرتا ہے، جو اس خیال پر مبنی ہے کہ کائنات کا ڈھانچہ اندرونی دباؤ اور بیرونی گھیراؤ کے توازن سے قائم رہتا ہے۔ یہ نظریہ کشش ثقل کے واحد ماڈل کو چیلنج کرتے ہوئے کائناتی توسیع، کہکشاؤں کی حرکات، اور روشنی کے رویے کو دباؤ کی بنیاد پر سمجھاتا ہے۔ یہ ایک ممکنہ کائناتی پھٹاؤ کا بھی تصور پیش کرتا ہے، جس کے اثرات زمین کے سمندروں اور مادی ساخت پر شدید ہوں گے۔</p>
-
-    <h2>١. تعارف</h2>
-    <p>جدید کاسمولوجی میں کائناتی ساخت اور حرکات کو عمومی طور پر کشش ثقل کے اصولوں سے تعبیر کیا جاتا ہے جو جنرل ریلیٹیویٹی کے تحت آتے ہیں۔ تاہم، مشاہداتی حقائق جیسے کہ تیز ہوتی ہوئی توسیع، کہکشاؤں کے گردش کے نمونے، اور وسیع کائناتی ڈھانچوں کی استحکام متبادل نظریات کی ضرورت کو ظاہر کرتی ہیں۔ CPC تھیوری یہ تجویز کرتی ہے کہ کائناتی دباؤ جو بیرونی گھیراؤ کے توازن میں ہو، کائنات کے استحکام کو کنٹرول کرتا ہے اور نئے نظریاتی زاویے پیش کرتا ہے۔</p>
-
-    <h2>٢. کائناتی پھٹاؤ — ایک مفروضاتی خاتمہ</h2>
-    <p>CPC تھیوری کے مطابق، کائنات ایک محدود، غبارے جیسی ساخت رکھتی ہے جہاں اندرونی دباؤ مسلسل بڑھتا رہتا ہے۔ اگر یہ دباؤ گھیراؤ کی حد سے تجاوز کر جائے تو کائنات اچانک پھٹ سکتی ہے، جس سے ستارے، کہکشائیں، اور مادہ تباہ ہو جائیں گے۔</p>
-
-    <h2>٣. پہلا اثر — پانی کا ردعمل</h2>
-    <p>زمین کے سمندر اپنی ناقابلِ دباؤ پذیر خصوصیات اور وسیع رقبے کی وجہ سے اس دھماکے کا سب سے پہلا اور اہم اثر برداشت کریں گے۔ پانی میں پھیلنے والی جھٹکے کی لہریں تباہ کن اور تیز ہوں گی۔</p>
-
-    <h2>٤. خلائی اجسام کیوں معلق رہتے ہیں — دباؤ پر مبنی وضاحت</h2>
-    <p>روایتی نظریے کے برعکس، جس میں صرف کشش ثقل سیٹلائٹس اور آسمانی اجسام کو معلق رکھتی ہے، CPC تھیوری اس توازن کو کائناتی دباؤ کے ایک خاص توازن کے طور پر بیان کرتی ہے جو اجسام کو گرنے سے روکتا ہے۔</p>
-
-    <h2>٥. روشنی پر دباؤ — فوٹونز کا گھیراؤ میں قید ہونا</h2>
-    <p>فوٹونز کائناتی دباؤ کے تحت قید ہوتے ہیں اور اس دباؤ سے متاثر ہوتے ہیں، جس کی وجہ سے ان کی رفتار اور پھیلاؤ دباؤ پر منحصر ہوتا ہے، جو روایتی طور پر ایک مستقل سمجھا جاتا ہے۔ یہ نظریہ ریڈ شفٹ اور کششی لینزنگ جیسے مظاہر کو نئے زاویے سے سمجھاتا ہے۔</p>
-
-    <h2>٦. گفتگو</h2>
-    <p>یہ نظریہ کشش ثقل کے واحد ہونے کے تصور کو چیلنج کرتا ہے اور کائناتی توسیع، استحکام، اور روشنی کے رویے کی وضاحت پیش کرتا ہے۔ اس نظریے کی تصدیق کے لیے مزید تجرباتی اور ریاضیاتی کام کی ضرورت ہے۔</p>
-
-    <h2>٧. نتیجہ</h2>
-    <p>CPC نظریہ کائنات کے ڈھانچے پر ایک متبادل، مضبوط نظریہ پیش کرتا ہے جو کائناتی دباؤ اور گھیراؤ کو بنیادی قوتیں مانتا ہے۔ یہ ایک ممکنہ کائناتی پھٹاؤ کی پیش گوئی کرتا ہے اور متعدد ایسے مظاہروں کی وضاحت کرتا ہے جنہیں روایتی طور پر صرف کشش ثقل سے جوڑا جاتا ہے۔</p>
-  </main>
-</body>
-  <!DOCTYPE html>
-<html lang="ur" dir="rtl">
-<head>
-  <meta charset="UTF-8">
-  <title>کائناتی دباؤ اور گھیراؤ</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <a href="index.html">English</a> |
-    <a href="urdu.html">اردو</a> |
-    <a href="arabic.html">العربية</a> |
-    <a href="argument.html">Scientific Argument</a> |
-    <a href="urdu-argument.html">دلائل (اردو)</a>
-  </header>
-
-  <main>
-    <h1>کائناتی دباؤ اور گھیراؤ: ایک نظریاتی خاکہ</h1>
-    <p><strong>تحریر:</strong> عثمان مدنی<br>
-    <strong>ای میل:</strong> madniusman13@gmail.com<br>
-    <strong>© 2025 عثمان مدنی۔ جملہ حقوق محفوظ ہیں۔</strong></p>
-
-    <h2>خلاصہ</h2>
-    <p>یہ مقالہ کائناتی دباؤ اور گھیراؤ (CPC) نظریہ پیش کرتا ہے، جو اس خیال پر مبنی ہے کہ کائنات کا ڈھانچہ اندرونی دباؤ اور بیرونی گھیراؤ کے توازن سے قائم رہتا ہے۔ یہ نظریہ کشش ثقل کے واحد ماڈل کو چیلنج کرتے ہوئے کائناتی توسیع، کہکشاؤں کی حرکات، اور روشنی کے رویے کو دباؤ کی بنیاد پر سمجھاتا ہے۔ یہ ایک ممکنہ کائناتی پھٹاؤ کا بھی تصور پیش کرتا ہے، جس کے اثرات زمین کے سمندروں اور مادی ساخت پر شدید ہوں گے۔</p>
-
-    <h2>١. تعارف</h2>
-    <p>جدید کاسمولوجی میں کائناتی ساخت اور حرکات کو عمومی طور پر کشش ثقل کے اصولوں سے تعبیر کیا جاتا ہے جو جنرل ریلیٹیویٹی کے تحت آتے ہیں۔ تاہم، مشاہداتی حقائق جیسے کہ تیز ہوتی ہوئی توسیع، کہکشاؤں کے گردش کے نمونے، اور وسیع کائناتی ڈھانچوں کی استحکام متبادل نظریات کی ضرورت کو ظاہر کرتی ہیں۔ CPC تھیوری یہ تجویز کرتی ہے کہ کائناتی دباؤ جو بیرونی گھیراؤ کے توازن میں ہو، کائنات کے استحکام کو کنٹرول کرتا ہے اور نئے نظریاتی زاویے پیش کرتا ہے۔</p>
-
-    <h2>٢. کائناتی پھٹاؤ — ایک مفروضاتی خاتمہ</h2>
-    <p>CPC تھیوری کے مطابق، کائنات ایک محدود، غبارے جیسی ساخت رکھتی ہے جہاں اندرونی دباؤ مسلسل بڑھتا رہتا ہے۔ اگر یہ دباؤ گھیراؤ کی حد سے تجاوز کر جائے تو کائنات اچانک پھٹ سکتی ہے، جس سے ستارے، کہکشائیں، اور مادہ تباہ ہو جائیں گے۔</p>
-
-    <h2>٣. پہلا اثر — پانی کا ردعمل</h2>
-    <p>زمین کے سمندر اپنی ناقابلِ دباؤ پذیر خصوصیات اور وسیع رقبے کی وجہ سے اس دھماکے کا سب سے پہلا اور اہم اثر برداشت کریں گے۔ پانی میں پھیلنے والی جھٹکے کی لہریں تباہ کن اور تیز ہوں گی۔</p>
-
-    <h2>٤. خلائی اجسام کیوں معلق رہتے ہیں — دباؤ پر مبنی وضاحت</h2>
-    <p>روایتی نظریے کے برعکس، جس میں صرف کشش ثقل سیٹلائٹس اور آسمانی اجسام کو معلق رکھتی ہے، CPC تھیوری اس توازن کو کائناتی دباؤ کے ایک خاص توازن کے طور پر بیان کرتی ہے جو اجسام کو گرنے سے روکتا ہے۔</p>
-
-    <h2>٥. روشنی پر دباؤ — فوٹونز کا گھیراؤ میں قید ہونا</h2>
-    <p>فوٹونز کائناتی دباؤ کے تحت قید ہوتے ہیں اور اس دباؤ سے متاثر ہوتے ہیں، جس کی وجہ سے ان کی رفتار اور پھیلاؤ دباؤ پر منحصر ہوتا ہے، جو روایتی طور پر ایک مستقل سمجھا جاتا ہے۔ یہ نظریہ ریڈ شفٹ اور کششی لینزنگ جیسے مظاہر کو نئے زاویے سے سمجھاتا ہے۔</p>
-
-    <h2>٦. گفتگو</h2>
-    <p>یہ نظریہ کشش ثقل کے واحد ہونے کے تصور کو چیلنج کرتا ہے اور کائناتی توسیع، استحکام، اور روشنی کے رویے کی وضاحت پیش کرتا ہے۔ اس نظریے کی تصدیق کے لیے مزید تجرباتی اور ریاضیاتی کام کی ضرورت ہے۔</p>
-
-    <h2>٧. نتیجہ</h2>
-    <p>CPC نظریہ کائنات کے ڈھانچے پر ایک متبادل، مضبوط نظریہ پیش کرتا ہے جو کائناتی دباؤ اور گھیراؤ کو بنیادی قوتیں مانتا ہے۔ یہ ایک ممکنہ کائناتی پھٹاؤ کی پیش گوئی کرتا ہے اور متعدد ایسے مظاہروں کی وضاحت کرتا ہے جنہیں روایتی طور پر صرف کشش ثقل سے جوڑا جاتا ہے۔</p>
-  </main>
-</body>
-  <body>
   <header>
     <nav>
       <a href="index.html">🏠 ہوم</a> |
       <a href="urdu.html">اردو</a> |
-      <a href="arabic.html">العربية</a> |
+      <a href="arabic.html">عربی</a> |
       <a href="argument.html">Scientific Argument</a> |
-      <a href="urdu-argument.html">دلائل (اردو)</a> |
+      <a href="urdu-argument.html">دلائل</a> |
       <a href="about.html">تعارف</a>
     </nav>
   </header>
-  <hr>
 
-  <!-- باقی آپ کا صفحہ کا مواد یہاں شروع ہوگا -->
+  <main>
+    <h1>کائناتی دباؤ اور گھیراؤ: ایک مفروضاتی خاکہ</h1>
+    <p><strong>تحریر:</strong> عثمان مدنی، آزاد محقق، پاکستان</p>
+    <p><strong>ای میل:</strong> madniusman13@gmail.com</p>
 
-</html>
+    <h2>خلاصہ</h2>
+    <p>
+      یہ مقالہ 'کائناتی دباؤ اور گھیراؤ' (CPC) نظریے کو پیش کرتا ہے جو اس تصور پر مبنی ہے کہ کائنات اپنی ساخت کو اندرونی دباؤ اور بیرونی گھیراؤ کی قوت کے توازن سے قائم رکھتی ہے۔ یہ نظریہ کشش ثقل کے واحد ماڈل کو چیلنج کرتے ہوئے کائناتی توسیع، کہکشاؤں کی حرکات، اور روشنی کے رویے کو دباؤ کی بنیاد پر سمجھاتا ہے۔
+    </p>
 
+    <h2>١. تعارف</h2>
+    <p>
+      جدید کاسمولوجی میں کائناتی ساخت اور حرکات کو عمومی طور پر کششِ ثقل کے اصولوں سے تعبیر کیا جاتا ہے جو جنرل ریلیٹیویٹی کے تحت آتے ہیں۔ تاہم، مشاہداتی حقائق جیسے کہ تیز ہوتی ہوئی توسیع، کہکشاؤں کے گردش کے نمونے، اور وسیع کائناتی ڈھانچوں کی استحکام متبادل نظریات کی ضرورت کو ظاہر کرتے ہیں۔ CPC تھیوری یہ تجویز کرتی ہے کہ کائناتی دباؤ جو بیرونی گھیراؤ کے توازن میں ہو، کائنات کے استحکام کو کنٹرول کرتا ہے اور نئے نظریاتی زاویے پیش کرتا ہے۔
+    </p>
+
+    <h2>٢. CPC نظریہ کے حق میں دس سائنسی دلائل</h2>
+    <ol>
+      <li><strong>کائنات کا مسلسل پھیلاؤ:</strong> اگر صرف گریویٹی ہوتی، تو کائنات ایک دوسرے کی طرف کھنچتی، لیکن ہم دیکھتے ہیں کہ کہکشائیں دور جا رہی ہیں، جو کہ اندرونی دباؤ کی نشاندہی کرتا ہے۔</li>
+      <li><strong>کائناتی توازن کا برقرار رہنا:</strong> اگر صرف گریویٹی کام کر رہی ہوتی تو تمام اجسام آپس میں ٹکرا کر منہدم ہو چکی ہوتیں، لیکن کائنات ایک متوازن نظام میں ہے۔</li>
+      <li><strong>بلیک ہولز اور نیوٹرون اسٹارز کا استقرار:</strong> ان میں گریویٹی بے حد زیادہ ہے، مگر پھر بھی وہ محدود دائرہ کار میں موجود ہیں۔</li>
+      <li><strong>کائناتی بیک گراؤنڈ ریڈی ایشن (CMBR) کی یکنواختی:</strong> پورے کائنات میں ایک جیسے سگنل ملنا اس دباؤ کے توازن کو ظاہر کرتا ہے۔</li>
+      <li><strong>مادہ اور اینٹی مادہ کا عدم توازن:</strong> بیگ بینگ کے بعد یہ برابر ہونے چاہیے تھے، لیکن ایسا نہ ہونا دباؤ کی مداخلت کو ظاہر کرتا ہے۔</li>
+      <li><strong>کوانٹم ویکیوم پریشر:</strong> خالی خلا بھی دباؤ رکھتا ہے جیسا کہ Casimir Effect سے ظاہر ہوتا ہے۔</li>
+      <li><strong>گریویٹی کی خامیاں:</strong> گریویٹی کو ابھی تک کوانٹم لیول پر unify نہیں کیا جا سکا، یہ ظاہر کرتا ہے کہ ہو سکتا ہے ہم دباؤ کو غلطی سے گریویٹی سمجھ رہے ہوں۔</li>
+      <li><strong>کائناتی سرحدیں:</strong> اگر کائنات محدود ہے تو اسے کسی بیرونی دباؤ یا تحفظ نے متوازن رکھا ہوگا۔</li>
+      <li><strong>تعمیراتی مشابہت:</strong> کائنات بلبلے یا گنبد جیسی ساخت رکھتی ہے، جس میں اندرونی دباؤ بیرونی دیوار سے متوازن ہے۔</li>
+      <li><strong>انسانی جسم میں دباؤ کے نظام:</strong> جیسے دماغی یا شریانی دباؤ، یہ قدرتی نظام بھی دباؤ سے منظم ہوتے ہیں، تو کائنات بھی ہو سکتی ہے۔</li>
+    </ol>
+
+    <h2>٣. کائناتی پھٹاؤ — ایک مفروضاتی انجام</h2>
+    <p>
+      اگر اندرونی دباؤ حد سے بڑھ جائے اور بیرونی گھیراؤ اسے سنبھال نہ سکے، تو کائنات پھٹ سکتی ہے، جس سے تمام کہکشائیں اور مادہ تباہ ہو جائے گا۔
+    </p>
+
+    <h2>٤. پہلا اثر — سمندروں کا ردعمل</h2>
+    <p>
+      پانی غیر سکڑنے والا ہے، اس لیے زمین کے سمندر سب سے پہلے اس دھماکے کا اثر محسوس کریں گے، اور اس کی شدت ناقابلِ برداشت ہوگی۔
+    </p>
+
+    <h2>٥. اجسام کا خلا میں معلق ہونا — دباؤ کی بنیاد پر</h2>
+    <p>
+      CPC کے مطابق، خلا میں اجسام صرف گریویٹی کی وجہ سے نہیں بلکہ دباؤ کے توازن سے معلق رہتے ہیں۔
+    </p>
+
+    <h2>٦. روشنی پر دباؤ کا اثر</h2>
+    <p>
+      روشنی کی رفتار اور سمت دباؤ کے تابع ہو سکتی ہے۔ یہ ریڈ شفٹ اور لینزنگ جیسے مظاہر کی نئی وضاحت پیش کرتا ہے۔
+    </p>
+
+    <h2>٧. نظریاتی مساوات</h2>
+    <ul>
+      <li><strong>توازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</li>
+      <li><strong>مداری دباؤ:</strong> Pr(r) = P₀ / (1 + k r²)</li>
+      <li><strong>ریڈ شفٹ:</strong> Δλ ∝ ∇P · d</li>
+    </ul>
+
+    <h2>٨. مرکزی نظریات کی خامیاں</h2>
+    <ul>
+      <li><strong>جنرل ریلیٹیویٹی:</strong> ڈارک انرجی کے بغیر توسیع کی وضاحت نہیں کر سکتی۔</li>
+      <li><strong>نیوٹونی گریویٹی:</strong> کائناتی پیمانے پر ناکام اور دباؤ کو نظر انداز کرتی ہے۔</li>
+      <li><strong>ڈارک انرجی ماڈلز:</strong> غیر مرئی قیاسات پر مبنی ہیں۔</li>
+      <li><strong>سٹرنگ تھیوری:</strong> پیچیدہ ہے اور عملی ثبوت نہیں رکھتی۔</li>
+    </ul>
+
+    <h2>٩. CPC نظریہ کی خوبیاں</h2>
+    <ul>
+      <li>ڈارک انرجی کے بغیر توسیع کی وضاحت دیتا ہے۔</li>
+      <li>سنگولیریٹی سے پاک ہے۔</li>
+      <li>حقیقی دنیا کی مثالوں سے تشبیہ دیتا ہے۔</li>
+    </ul>
+
+    <h2>١٠. نتیجہ</h2>
+    <p>
+      CPC نظریہ کائنات کی ساخت اور حرکت کی وضاحت کے لیے ایک دباؤ پر مبنی ماڈل پیش کرتا ہے، جو صرف کششِ ثقل پر مبنی ماڈلز کی کمزوریوں سے پاک ہے۔
+    </p>
+
+    <h2>١١. حوالہ جات</h2>
+    <ol>
+      <li>Misner, C. W., Thorne, K. S., & Wheeler, J. A. (1973). Gravitation. W. H. Freeman and Company.</li>
+      <li>Padmanabhan, T. (1993). Structure Formation in the Universe. Cambridge University Press.</li>
+      <li>Peebles, P. J. E. (1993). Principles of Physical Cosmology. Princeton University Press.</li>
+      <li>Riess, A. G., et al. (1998). Observational Evidence from Supernovae for an Accelerating Universe. The Astronomical Journal, 116(3), 1009–1038.</li>
+      <li>Verlinde, E. (2017). Emergent Gravity and the Dark Universe. SciPost Physics, 2(3), 016.</li>
+      <li>Zee, A. (2010). Quantum Field Theory in a Nutshell. Princeton University Press.</li>
+      <li>Weinberg, S. (1972). Gravitation and Cosmology. Wiley.</li>
+    </ol>
+  </main>
+
+  <footer>
+    <p>© 2025 عثمان مدنی — جملہ حقوق محفوظ ہیں</p>
+  </footer>
+</body>
 </html>
