--- a/urdu.html
+++ b/urdu.html
@@ -66,7 +66,7 @@
   </header>
 
   <main>
-    <h1>کائناتی دباؤ اور گھیراؤ: ایک مفروضاتی خاکہ</h1>
+    <h1>کائناتی دباؤ اور گھیراؤ: ایک نظریاتی خاکہ</h1>
     <p><strong>تحریر:</strong> عثمان مدنی، آزاد محقق، پاکستان</p>
     <p><strong>ای میل:</strong> madniusman13@gmail.com</p>
 
@@ -94,7 +94,7 @@
       <li><strong>انسانی جسم میں دباؤ کے نظام:</strong> جیسے دماغی یا شریانی دباؤ، یہ قدرتی نظام بھی دباؤ سے منظم ہوتے ہیں، تو کائنات بھی ہو سکتی ہے۔</li>
     </ol>
 
-    <h2>٣. کائناتی پھٹاؤ — ایک مفروضاتی انجام</h2>
+    <h2>٣. کائناتی پھٹاؤ — ایک نظریاتی انجام</h2>
     <p>
       اگر اندرونی دباؤ حد سے بڑھ جائے اور بیرونی گھیراؤ اسے سنبھال نہ سکے، تو کائنات پھٹ سکتی ہے، جس سے تمام کہکشائیں اور مادہ تباہ ہو جائے گا۔
     </p>
