--- a/arabic.html
+++ b/arabic.html
@@ -2,8 +2,56 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>الضغط الكوني والاحتواء: إطار فرضي</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>نظرية الضغط والاحتواء الكوني</title>
+  <style>
+    body {
+      font-family: 'Amiri', serif;
+      background: linear-gradient(to bottom, #f8f9fa, #e3f2fd);
+      color: #222;
+      line-height: 1.8;
+      margin: 0;
+      padding: 0 1rem;
+    }
+    header {
+      background-color: #006064;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav a {
+      color: #ffffff;
+      margin: 0 0.5rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      background-color: #ffffff;
+      padding: 2rem;
+      margin: 1rem auto;
+      max-width: 900px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      border-radius: 8px;
+    }
+    h1, h2 {
+      color: #004d40;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+    ol, ul {
+      padding-right: 1.5rem;
+    }
+    li {
+      margin-bottom: 0.7rem;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -11,103 +59,101 @@
       <a href="index.html">🏠 الرئيسية</a> |
       <a href="urdu.html">الأردية</a> |
       <a href="arabic.html">العربية</a> |
-      <a href="argument.html">Scientific Argument</a> |
-      <a href="urdu-argument.html">دلائل</a> |
-      <a href="about.html">حول</a>
+      <a href="argument.html">الحجج العلمية</a> |
+      <a href="about.html">حول النظرية</a>
     </nav>
   </header>
-  <hr>
 
   <main>
-    <h1>الضغط الكوني والاحتواء: إطار فرضي</h1>
-    <p><strong>الكاتب:</strong> عثمان مدني، باحث مستقل، باكستان</p>
+    <h1>نظرية الضغط والاحتواء الكوني: إطار نظري</h1>
+    <p><strong>بقلم:</strong> عثمان مدني، باحث مستقل، باكستان</p>
     <p><strong>البريد الإلكتروني:</strong> madniusman13@gmail.com</p>
 
     <h2>الملخص</h2>
     <p>
-      يقدم هذا البحث نظرية الضغط الكوني والاحتواء (CPC)، وهي نموذج تصوري يقترح أن هيكل الكون يحافظ على توازنه من خلال توازن بين الضغط الكوني الداخلي ومجال الاحتواء الخارجي. تتحدى هذه النظرية النموذج التقليدي المعتمد فقط على الجاذبية من خلال تفسير التوسع الكوني، وديناميكيات المجرات، وسلوك الفوتونات بناءً على تأثيرات الضغط.
+      يقدم هذا البحث نظرية "الضغط والاحتواء الكوني" التي ترى أن بنية الكون محفوظة من خلال توازن بين الضغط الداخلي والاحتواء الخارجي. تتحدى هذه النظرية النماذج التقليدية المعتمدة فقط على الجاذبية.
     </p>
 
     <h2>١. المقدمة</h2>
     <p>
-      تعزو الكوزمولوجيا الحديثة هيكل الكون وديناميكيته بشكل رئيسي إلى قوى الجاذبية كما وصفتها النسبية العامة. ومع ذلك، فإن الظواهر الرصدية مثل التوسع المتسارع، ومنحنيات دوران المجرات، واستقرار الهياكل الكونية الهائلة، تحفز الحاجة إلى نماذج بديلة. تقترح نظرية CPC أن الضغط الداخلي المتوازن بالاحتواء الخارجي هو المسؤول عن استقرار الكون.
+      تنسب الكوسمولوجيا الحديثة بنية الكون وحركته إلى الجاذبية. ومع ذلك، فإن بعض الظواهر مثل التوسع المتسارع واستقرار البُنى الكونية الضخمة تشير إلى وجود توازن أعمق قائم على الضغط.
     </p>
 
-    <h2>٢. عشرة دلائل علمية تفصيلية لدعم النظرية</h2>
+    <h2>٢. عشر حجج علمية لدعم النظرية</h2>
     <ol>
-      <li><strong>التمدد المستمر للكون:</strong> إذا كانت الجاذبية هي القوة الوحيدة، فستنجذب الكتل نحو بعضها، لكن الكون يتوسع بشكل متسارع. هذا يشير إلى وجود ضغط داخلي يدفع الكون إلى الخارج مثل بالون يتمدد.</li>
-      <li><strong>الحفاظ على توازن بنية الكون:</strong> رغم الجاذبية، لم تنهار المجرات أو الكواكب، مما يدل على توازن قوى، إحداها يمكن أن تكون قوة ضغط داخلية.</li>
-      <li><strong>ثبات الثقوب السوداء والنجوم النيوترونية:</strong> هذه الأجسام شديدة الجاذبية لكنها لا تنهار على نفسها فورًا، مما يشير إلى وجود ضغط احتوائي مقاوم.</li>
-      <li><strong>انتظام إشعاع الخلفية الكونية (CMBR):</strong> الاتساق في شدة الإشعاع الخلفي يعكس توازن ضغط موحد في جميع الاتجاهات.</li>
-      <li><strong>عدم التوازن بين المادة والمادة المضادة:</strong> بعد الانفجار العظيم، كان يجب أن تتساوى المادة والمادة المضادة، لكن غلبة المادة توحي بتدخل قوة احتوائية في التكوين الكوني.</li>
-      <li><strong>ضغط الفراغ الكمومي:</strong> حتى الفراغ يحتوي على طاقة تنتج ضغطًا قابلاً للقياس، كما يظهر في تأثير كازيمير.</li>
-      <li><strong>نواقص نظرية الجاذبية:</strong> لم يتم توحيد الجاذبية مع ميكانيكا الكم، ما قد يشير إلى أن ما نراه كجاذبية هو مظهر كبير النطاق للضغط الكوني.</li>
-      <li><strong>حدود الكون:</strong> إذا كان الكون محدودًا، فكيف يحافظ على توازنه دون أن ينهار؟ يشير ذلك إلى وجود مجال احتواء خارجي يوازن الضغط الداخلي.</li>
-      <li><strong>تشبيه معماري ميكانيكي:</strong> يشبه الكون فقاعة غازية، حيث يحافظ سطحها على الضغط الداخلي، كما تفعل الهياكل الهندسية في البناء.</li>
-      <li><strong>أنظمة الضغط في الجسم البشري:</strong> مثل الدورة الدموية وضغط الدماغ، تدل على أن الأنظمة الطبيعية تعمل تحت توازن ضغط، ويمكن أن ينطبق ذلك على الكون بأكمله.</li>
+      <li><strong>التمدد المستمر للكون:</strong> يخالف ما يجب أن تفعله الجاذبية، مما يشير إلى وجود ضغط داخلي.</li>
+      <li><strong>استمرار التوازن الكوني:</strong> لم ينهَر الكون رغم الجاذبية، ما يدل على قوة مضادة تحفظ التوازن.</li>
+      <li><strong>ثبات الثقوب السوداء والنجوم النيوترونية:</strong> رغم الجاذبية الشديدة، تبقى مستقرة.</li>
+      <li><strong>تجانس إشعاع الخلفية الكونية (CMBR):</strong> يشير إلى ضغط موحد في كل مكان.</li>
+      <li><strong>عدم توازن المادة والمادة المضادة:</strong> قد يكون نتيجة لتدخل قوى الاحتواء.</li>
+      <li><strong>ضغط الفراغ الكمومي:</strong> يظهر في تأثير كازيمير.</li>
+      <li><strong>قصور الجاذبية:</strong> لم يتم توحيدها بعد على المستوى الكمي.</li>
+      <li><strong>حدود الكون:</strong> إذا كان الكون محدودًا، فلا بد من وجود بنية احتواء.</li>
+      <li><strong>تشبيه معماري:</strong> يشبه الكون فقاعة ذات ضغط داخلي واحتواء خارجي.</li>
+      <li><strong>أنظمة الضغط في جسم الإنسان:</strong> مثل ضغط الدم والسوائل — الطبيعة تميل إلى التوازن.</li>
     </ol>
 
-    <h2>٣. التمزق الكوني — نهاية فرضية للكون</h2>
+    <h2>٣. الانفجار الكوني المحتمل</h2>
     <p>
-      وفقًا لنظرية CPC، يشبه الكون نظامًا محدودًا يشبه البالون حيث يتزايد الضغط الداخلي باستمرار. إذا تجاوز هذا الضغط قدرة الاحتواء، فقد يحدث تمزق مفاجئ يؤدي إلى تفكك كارثي للنجوم والمجرات.
+      إذا تجاوز الضغط الداخلي قدرة الاحتواء، قد ينفجر الكون مسببًا دمارًا شاملاً للنجوم والمجرات.
     </p>
 
-    <h2>٤. أول أثر — استجابة المحيطات</h2>
+    <h2>٤. تأثير المحيطات</h2>
     <p>
-      ستكون محيطات الأرض أول من يستجيب بسبب طبيعتها غير القابلة للضغط. ستنتشر موجات الصدمة عبر الماء بسرعة ودمار كبير.
+      ستكون محيطات الأرض أول المتأثرين بسبب عدم قابليتها للانضغاط، مما يجعلها عرضة لموجات صادمة قوية.
     </p>
 
-    <h2>٥. لماذا تبقى الأجسام الفضائية معلقة؟ — تفسير قائم على الضغط</h2>
+    <h2>٥. تعليق الأجسام في الفضاء</h2>
     <p>
-      بخلاف النموذج التقليدي حيث تعلق الأجسام بواسطة الجاذبية فقط، تشرح نظرية CPC هذا التوازن على أنه ناتج عن ضغط كوني متوازن داخل الغلاف الكوني.
+      تفسر النظرية تعليق الأجسام الكونية نتيجة لتوازن الضغط، لا الجاذبية وحدها.
     </p>
 
-    <h2>٦. الضوء تحت الضغط — احتواء الفوتونات</h2>
+    <h2>٦. الضوء تحت الضغط</h2>
     <p>
-      الفوتونات محاطة ومقيدة بالضغط الكوني، مما يجعل سرعتها وانتشارها معتمدًا على الضغط بدلاً من الثبات العالمي. وهذا يفسر ظواهر مثل الانزياح نحو الأحمر وعدسات الجاذبية.
+      الضوء يتأثر بالضغط الكوني، مما يغير من سرعته ومساره، ويقدم تفسيرات جديدة للانزياح الأحمر وعدسات الجاذبية.
     </p>
 
     <h2>٧. المعادلات النظرية</h2>
     <ul>
       <li><strong>التوازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</li>
-      <li><strong>منطقة ضغط مدارية:</strong> Pr(r) = P₀ / (1 + k r²)</li>
+      <li><strong>منطقة الضغط المداري:</strong> Pr(r) = P₀ / (1 + k r²)</li>
       <li><strong>الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</li>
     </ul>
 
-    <h2>٨. نقاط ضعف النظريات التقليدية</h2>
+    <h2>٨. أوجه القصور في النظريات التقليدية</h2>
     <ul>
-      <li><strong>النسبية العامة:</strong> لا تفسر التوسع المتسارع بدون الطاقة المظلمة وتفترض التفردات.</li>
-      <li><strong>جاذبية نيوتن:</strong> غير كافية على المقاييس الكونية وتتجاهل الضغط.</li>
-      <li><strong>نماذج الطاقة المظلمة والتضخم:</strong> تعتمد على كيانات غير مرئية.</li>
-      <li><strong>نظرية الأوتار / الجاذبية الكمومية:</strong> معقدة وتفتقر إلى الأدلة التجريبية.</li>
+      <li><strong>النسبية العامة:</strong> لا تفسر التمدد بدون الطاقة المظلمة.</li>
+      <li><strong>جاذبية نيوتن:</strong> غير صالحة على المستوى الكوني.</li>
+      <li><strong>نماذج الطاقة المظلمة:</strong> تعتمد على عناصر غير مرئية.</li>
+      <li><strong>نظرية الأوتار:</strong> معقدة ولا دليل تجريبي لها.</li>
     </ul>
 
-    <h2>٩. مزايا نظرية CPC</h2>
+    <h2>٩. مزايا نظرية الضغط والاحتواء</h2>
     <ul>
-      <li>تفسر التوسع دون الحاجة للطاقة المظلمة.</li>
-      <li>لا تفترض تفردات.</li>
-      <li>تستخدم تشبيهات من العمارة والديناميكا المائية.</li>
+      <li>تفسير التوسع الكوني دون حاجة لطاقة مظلمة.</li>
+      <li>لا تتنبأ بتفردات رياضية.</li>
+      <li>تستخدم تشبيهات من العمارة والديناميكا.</li>
     </ul>
 
-    <h2>١٠. الخاتمة</h2>
+    <h2>١٠. الخلاصة</h2>
     <p>
-      تقدم نظرية الضغط الكوني والاحتواء نموذجًا بديلاً لفهم هيكل الكون، حيث تضع الضغط والاحتواء كقوى أساسية. كما تتنبأ بتمزق كوني محتمل وتفسر ظواهر كونية متعددة خارج نطاق الجاذبية التقليدي.
+      تقدم النظرية نموذجًا بديلًا لفهم الكون مبنيًا على الضغط والاحتواء، مما يفتح آفاقًا جديدة لفهم البنية والحركة الكونية.
     </p>
 
     <h2>١١. المراجع</h2>
     <ol>
-      <li>Misner, C. W., Thorne, K. S., & Wheeler, J. A. (1973). <em>Gravitation</em>. W. H. Freeman and Company.</li>
-      <li>Padmanabhan, T. (1993). <em>Structure Formation in the Universe</em>. Cambridge University Press.</li>
-      <li>Peebles, P. J. E. (1993). <em>Principles of Physical Cosmology</em>. Princeton University Press.</li>
-      <li>Riess, A. G., et al. (1998). Observational Evidence from Supernovae for an Accelerating Universe and a Cosmological Constant. <em>The Astronomical Journal, 116(3), 1009–1038</em>.</li>
-      <li>Verlinde, E. (2017). Emergent Gravity and the Dark Universe. <em>SciPost Physics, 2(3), 016</em>.</li>
-      <li>Zee, A. (2010). <em>Quantum Field Theory in a Nutshell</em> (2nd ed.). Princeton University Press.</li>
-      <li>Weinberg, S. (1972). <em>Gravitation and Cosmology: Principles and Applications of the General Theory of Relativity</em>. Wiley.</li>
+      <li>Misner, Thorne, Wheeler, "Gravitation" (1973)</li>
+      <li>Padmanabhan, "Structure Formation in the Universe" (1993)</li>
+      <li>Peebles, "Principles of Physical Cosmology" (1993)</li>
+      <li>Riess et al., "Observational Evidence..." The Astronomical Journal (1998)</li>
+      <li>Verlinde, "Emergent Gravity..." SciPost Physics (2017)</li>
+      <li>Zee, "Quantum Field Theory in a Nutshell" (2010)</li>
+      <li>Weinberg, "Gravitation and Cosmology" (1972)</li>
     </ol>
-
-    <footer>
-      <p>© 2025 عثمان مدني — جميع الحقوق محفوظة</p>
-    </footer>
   </main>
+
+  <footer>
+    <p>© 2025 عثمان مدني - جميع الحقوق محفوظة</p>
+  </footer>
 </body>
 </html>
