--- a/index.html
+++ b/index.html
@@ -2,82 +2,164 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cosmic Pressure and Containment</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cosmic Pressure and Containment Theory</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #f0f4f8, #e0f7fa);
+      margin: 0;
+      padding: 0;
+      color: #1a1a1a;
+      line-height: 1.8;
+    }
+    header {
+      background-color: #004d99;
+      color: white;
+      padding: 1.5rem;
+      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    }
+    nav a {
+      color: #ffffff;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 1000px;
+      background-color: #ffffff;
+      margin: 2rem auto;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+    h1, h2 {
+      color: #0d47a1;
+    }
+    h2 {
+      border-bottom: 2px solid #90caf9;
+      padding-bottom: 0.3rem;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #555;
+      padding: 1.5rem;
+      background-color: #f5f5f5;
+      margin-top: 2rem;
+    }
+    ul, ol {
+      padding-left: 1.5rem;
+    }
+    li {
+      margin-bottom: 0.6rem;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <a href="index.html">English</a> |
-    <a href="urdu.html">اردو</a> |
-    <a href="arabic.html">العربية</a> |
-    <a href="argument.html">Scientific Argument</a> |
-    <a href="urdu-argument.html">دلائل (اردو)</a>
+    <nav>
+      <a href="index.html">🏠 Home</a> |
+      <a href="urdu.html">Urdu</a> |
+      <a href="arabic.html">Arabic</a> |
+      <a href="argument.html">Scientific Arguments</a> |
+      <a href="about.html">About</a>
+    </nav>
   </header>
 
   <main>
-    <h1>Cosmic Pressure and Containment: A Hypothetical Framework</h1>
-    <p><strong>Author:</strong> Usman Madni<br>
-    <strong>Email:</strong> madniusman13@gmail.com<br>
-    <strong>© 2025 Usman Madni. All rights reserved.</strong></p>
+    <h1>Cosmic Pressure and Containment: A Theoretical Framework</h1>
+    <p><strong>Author:</strong> Usman Madni | <strong>Email:</strong> madniusman13@gmail.com</p>
 
     <h2>Abstract</h2>
-    <p>This theory proposes that the universe maintains its structure through a balance of internal cosmic pressure and an external containment force. It explains cosmic expansion, photon behavior, and structural stability without invoking dark energy or singularities.</p>
+    <p>
+      This paper presents the Cosmic Pressure and Containment (CPC) theory, proposing that the structure and stability of the universe result from a balance between internal pressure and external containment, offering a new perspective beyond gravity-only models.
+    </p>
 
     <h2>1. Introduction</h2>
-    <p>Modern cosmology heavily relies on gravity. However, observations like accelerating expansion and large-scale structure demand alternative explanations. CPC theory posits that internal pressure and external containment govern cosmic behavior.</p>
+    <p>
+      Traditional cosmology attributes cosmic behavior to gravitational forces. However, observations like accelerating expansion and galaxy stability suggest that pressure may play a vital role. The CPC theory introduces pressure-containment equilibrium as a governing mechanism.
+    </p>
 
-    <h2>2. The Cosmic Rupture</h2>
-    <p>Just like a balloon bursts when internal pressure exceeds containment, the universe could face a rupture. Such an event would destabilize galaxies, stars, and even atomic structure.</p>
-
-    <h2>3. Oceans: First Responders</h2>
-    <p>Due to water's incompressibility, Earth's oceans would react first in a rupture scenario, possibly leading to global catastrophe.</p>
-
-    <h2>4. Orbital Suspension</h2>
-    <p>Instead of gravity alone, cosmic pressure maintains orbital positions of celestial bodies by balancing containment and pressure forces.</p>
-
-    <h2>5. Light & Pressure</h2>
-    <p>Photon behavior — redshift, bending, speed — is influenced by pressure gradients, not only gravity.</p>
-
-    <h2>6. Theoretical Equations</h2>
-    <ul>
-      <li><strong>Pressure-Containment Balance:</strong> Pi × A = Fc × A → Pi = Fc</li>
-      <li><strong>Orbital Zones:</strong> Pr(r) = P₀ / (1 + kr²), where dPr/dr ≈ 0 → stable orbits</li>
-      <li><strong>Redshift:</strong> Δλ ∝ ∇P · d</li>
-    </ul>
-
-    <h2>7. Critique of Other Theories</h2>
-    <ul>
-      <li>General Relativity predicts singularities and needs dark energy</li>
-      <li>Newtonian gravity fails at cosmic scales</li>
-      <li>Dark energy models are speculative</li>
-      <li>String theory lacks empirical grounding</li>
-    </ul>
-
-    <h2>8. Conclusion</h2>
-    <p>CPC Theory provides a new paradigm for understanding the universe through dynamic pressure and structural containment — without resorting to invisible forces.</p>
-
-    <h2>References</h2>
+    <h2>2. Ten Scientific Arguments for CPC Theory</h2>
     <ol>
-      <li>Misner, Thorne & Wheeler (1973) – Gravitation</li>
-      <li>Riess et al. (1998) – Accelerating Universe</li>
-      <li>Verlinde (2017) – Emergent Gravity</li>
-      <li>Planck Mission Data</li>
+      <li><strong>Universal Expansion:</strong> Contrary to gravitational expectations, galaxies move apart, suggesting an internal pressure.</li>
+      <li><strong>Maintained Balance:</strong> The universe has not collapsed, implying a counteracting force to gravity.</li>
+      <li><strong>Black Holes & Neutron Stars:</strong> Extreme gravitational objects remain stable — suggesting containment.</li>
+      <li><strong>CMBR Uniformity:</strong> Cosmic background radiation is almost identical everywhere — indicating universal pressure.</li>
+      <li><strong>Matter-Antimatter Imbalance:</strong> May result from containment dynamics post-Big Bang.</li>
+      <li><strong>Quantum Vacuum Pressure:</strong> As evident from the Casimir Effect.</li>
+      <li><strong>Gravity's Limitations:</strong> Cannot be unified with quantum physics yet.</li>
+      <li><strong>Universe Edges:</strong> A finite universe suggests structural boundaries or a containment field.</li>
+      <li><strong>Architectural Analogy:</strong> Like a pressurized bubble with surface tension maintaining form.</li>
+      <li><strong>Natural Pressure Systems:</strong> Like blood pressure or atmospheric systems — nature favors pressure balance.</li>
+    </ol>
+
+    <h2>3. Cosmic Rupture Hypothesis</h2>
+    <p>
+      If internal pressure surpasses containment strength, a cosmic rupture may occur, disintegrating galaxies and matter.
+    </p>
+
+    <h2>4. Ocean Impact</h2>
+    <p>
+      Earth's oceans, being incompressible, would react first, absorbing shockwaves with devastating effect.
+    </p>
+
+    <h2>5. Why Objects Stay Suspended</h2>
+    <p>
+      Rather than gravity alone, CPC explains that objects float due to balanced cosmic pressure around them.
+    </p>
+
+    <h2>6. Light and Pressure</h2>
+    <p>
+      Light's behavior is affected by cosmic pressure, which can alter its speed and trajectory, offering new views on redshift and lensing.
+    </p>
+
+    <h2>7. Key Theoretical Equations</h2>
+    <ul>
+      <li><strong>Equilibrium Condition:</strong> Pi × A = Fc × A → Pi = Fc</li>
+      <li><strong>Orbital Pressure Profile:</strong> Pr(r) = P₀ / (1 + k r²)</li>
+      <li><strong>Redshift & Pressure Gradient:</strong> Δλ ∝ ∇P · d</li>
+    </ul>
+
+    <h2>8. Weaknesses of Mainstream Theories</h2>
+    <ul>
+      <li><strong>General Relativity:</strong> Requires dark energy to explain accelerated expansion.</li>
+      <li><strong>Newtonian Gravity:</strong> Fails on cosmic scales.</li>
+      <li><strong>Dark Energy Models:</strong> Rely on unobservable entities.</li>
+      <li><strong>String Theory:</strong> Complex and lacks experimental proof.</li>
+    </ul>
+
+    <h2>9. Advantages of CPC Theory</h2>
+    <ul>
+      <li>Explains expansion without dark energy.</li>
+      <li>Eliminates singularities.</li>
+      <li>Inspired by architecture and natural systems.</li>
+    </ul>
+
+    <h2>10. Conclusion</h2>
+    <p>
+      CPC Theory offers a comprehensive model explaining cosmic structure and behavior through the lens of pressure and containment — inviting further theoretical and observational inquiry.
+    </p>
+
+    <h2>11. References</h2>
+    <ol>
+      <li>Misner, Thorne, Wheeler – <em>Gravitation</em> (1973)</li>
+      <li>Padmanabhan – <em>Structure Formation in the Universe</em> (1993)</li>
+      <li>Peebles – <em>Principles of Physical Cosmology</em> (1993)</li>
+      <li>Riess et al. – <em>The Astronomical Journal</em> (1998)</li>
+      <li>Verlinde – <em>Emergent Gravity and the Dark Universe</em> (2017)</li>
+      <li>Zee – <em>Quantum Field Theory in a Nutshell</em> (2010)</li>
+      <li>Weinberg – <em>Gravitation and Cosmology</em> (1972)</li>
     </ol>
   </main>
+
+  <footer>
+    <p>© 2025 Usman Madni — All rights reserved</p>
+  </footer>
 </body>
-  <body>
-  <header>
-    <nav>
-      <a href="index.html">🏠 ہوم</a> |
-      <a href="urdu.html">اردو</a> |
-      <a href="arabic.html">العربية</a> |
-      <a href="argument.html">Scientific Argument</a> |
-      <a href="urdu-argument.html">دلائل (اردو)</a> |
-      <a href="about.html">تعارف</a>
-    </nav>
-  </header>
-  <hr>
-
-  <!-- باقی آپ کا صفحہ کا مواد یہاں شروع ہوگا -->
-
 </html>
