--- a/arabic.html
+++ b/arabic.html
@@ -3,157 +3,61 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>نظرية الضغط والاحتواء الكوني</title>
+  <title>نظرية الضغط الكوني والاحتواء</title>
   <style>
     body {
-      font-family: 'Amiri', serif;
-      background: linear-gradient(to bottom, #f8f9fa, #e3f2fd);
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f4;
       color: #222;
       line-height: 1.8;
-      margin: 0;
-      padding: 0 1rem;
-    }
-    header {
-      background-color: #006064;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    nav a {
-      color: #ffffff;
-      margin: 0 0.5rem;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    main {
-      background-color: #ffffff;
-      padding: 2rem;
-      margin: 1rem auto;
+      padding: 20px;
       max-width: 900px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      border-radius: 8px;
+      margin: auto;
     }
-    h1, h2 {
-      color: #004d40;
+    h1, h2, h3 {
+      color: #004d99;
     }
-    footer {
+    img {
+      width: 100%;
+      max-width: 700px;
+      border: 2px solid #ccc;
+      margin: 20px auto;
+      display: block;
+    }
+    .nav {
+      background-color: #004d99;
+      color: white;
+      padding: 10px;
+      margin-bottom: 20px;
       text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #666;
     }
-    ol, ul {
-      padding-right: 1.5rem;
+    .nav a {
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
     }
-    li {
-      margin-bottom: 0.7rem;
+    .nav a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html">🏠 الرئيسية</a> |
-      <a href="urdu.html">الأردية</a> |
-      <a href="arabic.html">العربية</a> |
-      <a href="argument.html">الحجج العلمية</a> |
-      <a href="about.html">حول النظرية</a>
-    </nav>
-  </header>
+  <div class="nav">
+    <a href="index.html">الصفحة الرئيسية</a>
+    <a href="urdu.html">الأردية</a>
+    <a href="argument.html">النظريات العلمية</a>
+  </div>
 
-  <main>
-    <h1>نظرية الضغط والاحتواء الكوني: إطار نظري</h1>
-    <p><strong>بقلم:</strong> عثمان مدني، باحث مستقل، باكستان</p>
-    <p><strong>البريد الإلكتروني:</strong> madniusman13@gmail.com</p>
+  <h1>نظرية الضغط الكوني والاحتواء</h1>
+  <p>تقدم هذه النظرية أن الكون يُحافظ على هيكله من خلال التوازن بين الضغط الداخلي الكوني والقوة المحيطة الخارجية.</p>
 
-    <h2>الملخص</h2>
-    <p>
-      يقدم هذا البحث نظرية "الضغط والاحتواء الكوني" التي ترى أن بنية الكون محفوظة من خلال توازن بين الضغط الداخلي والاحتواء الخارجي. تتحدى هذه النظرية النماذج التقليدية المعتمدة فقط على الجاذبية.
-    </p>
+  <h2>تصاوير ورسومات</h2>
+  <img src="images/internal-pressure.png" alt="ضغط كوني وانفجار">
+  <img src="images/cpc-layers.png" alt="طبقات الضغط الكوني">
+  <img src="images/cpc-diagrams.png" alt="ميكانيكية الضغط والهيكل">
 
-    <h2>١. المقدمة</h2>
-    <p>
-      تنسب الكوسمولوجيا الحديثة بنية الكون وحركته إلى الجاذبية. ومع ذلك، فإن بعض الظواهر مثل التوسع المتسارع واستقرار البُنى الكونية الضخمة تشير إلى وجود توازن أعمق قائم على الضغط.
-    </p>
+  <h2>الخلاصة</h2>
+  <p>تفسر النظرية هذه الكون وفق الضغوط والقوى المنظمة ليس فقط وفق الجاذبية. تقدم وجهة نظر جديدة لمفهوم هيكل الكون وحركته.</p>
 
-    <h2>٢. عشر حجج علمية لدعم النظرية</h2>
-    <ol>
-      <li><strong>التمدد المستمر للكون:</strong> يخالف ما يجب أن تفعله الجاذبية، مما يشير إلى وجود ضغط داخلي.</li>
-      <li><strong>استمرار التوازن الكوني:</strong> لم ينهَر الكون رغم الجاذبية، ما يدل على قوة مضادة تحفظ التوازن.</li>
-      <li><strong>ثبات الثقوب السوداء والنجوم النيوترونية:</strong> رغم الجاذبية الشديدة، تبقى مستقرة.</li>
-      <li><strong>تجانس إشعاع الخلفية الكونية (CMBR):</strong> يشير إلى ضغط موحد في كل مكان.</li>
-      <li><strong>عدم توازن المادة والمادة المضادة:</strong> قد يكون نتيجة لتدخل قوى الاحتواء.</li>
-      <li><strong>ضغط الفراغ الكمومي:</strong> يظهر في تأثير كازيمير.</li>
-      <li><strong>قصور الجاذبية:</strong> لم يتم توحيدها بعد على المستوى الكمي.</li>
-      <li><strong>حدود الكون:</strong> إذا كان الكون محدودًا، فلا بد من وجود بنية احتواء.</li>
-      <li><strong>تشبيه معماري:</strong> يشبه الكون فقاعة ذات ضغط داخلي واحتواء خارجي.</li>
-      <li><strong>أنظمة الضغط في جسم الإنسان:</strong> مثل ضغط الدم والسوائل — الطبيعة تميل إلى التوازن.</li>
-    </ol>
-
-    <h2>٣. الانفجار الكوني المحتمل</h2>
-    <p>
-      إذا تجاوز الضغط الداخلي قدرة الاحتواء، قد ينفجر الكون مسببًا دمارًا شاملاً للنجوم والمجرات.
-    </p>
-
-    <h2>٤. تأثير المحيطات</h2>
-    <p>
-      ستكون محيطات الأرض أول المتأثرين بسبب عدم قابليتها للانضغاط، مما يجعلها عرضة لموجات صادمة قوية.
-    </p>
-
-    <h2>٥. تعليق الأجسام في الفضاء</h2>
-    <p>
-      تفسر النظرية تعليق الأجسام الكونية نتيجة لتوازن الضغط، لا الجاذبية وحدها.
-    </p>
-
-    <h2>٦. الضوء تحت الضغط</h2>
-    <p>
-      الضوء يتأثر بالضغط الكوني، مما يغير من سرعته ومساره، ويقدم تفسيرات جديدة للانزياح الأحمر وعدسات الجاذبية.
-    </p>
-
-    <h2>٧. المعادلات النظرية</h2>
-    <ul>
-      <li><strong>التوازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</li>
-      <li><strong>منطقة الضغط المداري:</strong> Pr(r) = P₀ / (1 + k r²)</li>
-      <li><strong>الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</li>
-    </ul>
-
-    <h2>٨. أوجه القصور في النظريات التقليدية</h2>
-    <ul>
-      <li><strong>النسبية العامة:</strong> لا تفسر التمدد بدون الطاقة المظلمة.</li>
-      <li><strong>جاذبية نيوتن:</strong> غير صالحة على المستوى الكوني.</li>
-      <li><strong>نماذج الطاقة المظلمة:</strong> تعتمد على عناصر غير مرئية.</li>
-      <li><strong>نظرية الأوتار:</strong> معقدة ولا دليل تجريبي لها.</li>
-    </ul>
-
-    <h2>٩. مزايا نظرية الضغط والاحتواء</h2>
-    <ul>
-      <li>تفسير التوسع الكوني دون حاجة لطاقة مظلمة.</li>
-      <li>لا تتنبأ بتفردات رياضية.</li>
-      <li>تستخدم تشبيهات من العمارة والديناميكا.</li>
-    </ul>
-
-    <h2>١٠. الخلاصة</h2>
-    <p>
-      تقدم النظرية نموذجًا بديلًا لفهم الكون مبنيًا على الضغط والاحتواء، مما يفتح آفاقًا جديدة لفهم البنية والحركة الكونية.
-    </p>
-
-    <h2>١١. المراجع</h2>
-    <ol>
-      <li>Misner, Thorne, Wheeler, "Gravitation" (1973)</li>
-      <li>Padmanabhan, "Structure Formation in the Universe" (1993)</li>
-      <li>Peebles, "Principles of Physical Cosmology" (1993)</li>
-      <li>Riess et al., "Observational Evidence..." The Astronomical Journal (1998)</li>
-      <li>Verlinde, "Emergent Gravity..." SciPost Physics (2017)</li>
-      <li>Zee, "Quantum Field Theory in a Nutshell" (2010)</li>
-      <li>Weinberg, "Gravitation and Cosmology" (1972)</li>
-    </ol>
-  </main>
-
-  <footer>
-    <p>© 2025 عثمان مدني - جميع الحقوق محفوظة</p>
-  </footer>
 </body>
 </html>
