--- a/arabic.html
+++ b/arabic.html
@@ -3,61 +3,117 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>نظرية الضغط الكوني والاحتواء</title>
+  <title>كائناتی الضغط والاحتواء - النظرية الكونية</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background-color: #f4f4f4;
-      color: #222;
-      line-height: 1.8;
+      background-color: #f2f2f2;
+      margin: 0;
+      padding: 0;
+      direction: rtl;
+    }
+    header {
+      background-color: #004466;
+      color: white;
       padding: 20px;
+      text-align: center;
+    }
+    nav {
+      background-color: #006699;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .container {
+      padding: 20px;
+      line-height: 1.8;
+      background-color: white;
       max-width: 900px;
       margin: auto;
     }
     h1, h2, h3 {
-      color: #004d99;
+      color: #003344;
     }
     img {
-      width: 100%;
-      max-width: 700px;
-      border: 2px solid #ccc;
-      margin: 20px auto;
       display: block;
+      max-width: 100%;
+      margin: 20px auto;
+      border: 2px solid #ccc;
+      border-radius: 10px;
     }
-    .nav {
-      background-color: #004d99;
+    footer {
+      background-color: #004466;
       color: white;
-      padding: 10px;
-      margin-bottom: 20px;
       text-align: center;
-    }
-    .nav a {
-      color: white;
-      margin: 0 10px;
-      text-decoration: none;
-    }
-    .nav a:hover {
-      text-decoration: underline;
+      padding: 10px;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <div class="nav">
-    <a href="index.html">الصفحة الرئيسية</a>
-    <a href="urdu.html">الأردية</a>
-    <a href="argument.html">النظريات العلمية</a>
+  <header>
+    <h1>كائناتی الضغط والاحتواء</h1>
+    <p>نموذج علمي جديد لفهم بنية الكون</p>
+  </header>
+
+  <nav>
+    <a href="index.html">الرئيسية</a>
+    <a href="urdu.html">اردو</a>
+    <a href="arabic.html">عربي</a>
+    <a href="about.html">حول</a>
+  </nav>
+
+  <div class="container">
+    <h2>المقدمة</h2>
+    <p>
+      تقدم نظرية الضغط والاحتواء الكوني (CPC) تصورًا جديدًا للكون يقوم على توازن بين الضغط الداخلي والاحتواء الخارجي. هذا النموذج يتحدى فكرة أن الجاذبية وحدها تتحكم في تمدد الكون واستقراره.
+    </p>
+
+    <h2>الدلائل العلمية</h2>
+    <ol>
+      <li><strong>تمدد الكون:</strong> المجرات تبتعد عن بعضها بسرعة، وهو ما يتناقض مع الجاذبية ويتفق مع وجود ضغط داخلي.</li>
+      <li><strong>استقرار البنية الكونية:</strong> لو كانت الجاذبية فقط فاعلة، لتهاوى الكون، لكننا نلاحظ توازنًا يدل على وجود احتواء منظم.</li>
+      <li><strong>الثقوب السوداء:</strong> وجود حدود لابتلاعها يدل على قوة احتواء تكبح تمددها المطلق.</li>
+      <li><strong>إشعاع الخلفية الكونية:</strong> التماثل فيه يدل على ضغط موحد منتشر في الكون.</li>
+      <li><strong>عدم توازن المادة/ضد المادة:</strong> قد يكون نتيجة تدخل فيزيائي للاحتواء.</li>
+      <li><strong>ضغط الفراغ الكمومي:</strong> يشير تأثير كازيمير إلى وجود طاقة ضغط حتى في الفراغ.</li>
+      <li><strong>قصور نظرية الجاذبية:</strong> لم توحد مع ميكانيكا الكم، ما يفتح المجال لنظرية جديدة تعتمد الضغط.</li>
+      <li><strong>حدود الكون:</strong> تفرض فكرة الاحتواء، فاللامحدودية تتطلب طاقة لا متناهية.</li>
+      <li><strong>تشبيه معماري:</strong> يشبه الكون فقاعة غازية محاطة بجدار يوازن الضغط الداخلي.</li>
+      <li><strong>أنظمة الضغط في الطبيعة:</strong> من الدماغ إلى المحيطات، الضغط مبدأ أساسي في التوازن الطبيعي.</li>
+    </ol>
+
+    <h2>الصور التوضيحية</h2>
+    <img src="internal-pressure.png" alt="الضغط الداخلي الكوني">
+    <img src="cpc-layers.png" alt="طبقات الاحتواء الكوني">
+    <img src="cpc-diagrams.png" alt="رسومات الضغط والاحتواء">
+
+    <h2>المعادلات النظرية</h2>
+    <p><strong>توازن الضغط والاحتواء:</strong> Pi = Fc</p>
+    <p><strong>المسارات المدارية:</strong> P(r) = P0 / (1 + k*r²)</p>
+    <p><strong>التحول الأحمر بفعل التدرج الضغطي:</strong> Δλ ∝ ∇P · d</p>
+
+    <h2>الخاتمة</h2>
+    <p>
+      تقدم نظرية الضغط والاحتواء الكوني بديلاً جديدًا لفهم تمدد واستقرار الكون دون الاعتماد الكامل على الجاذبية. وتفتح الباب أمام نماذج وتجارب جديدة.
+    </p>
+
+    <p><strong>الباحث:</strong> عثمان مدني<br>
+      <strong>البريد الإلكتروني:</strong> madniusman13@gmail.com<br>
+      <strong>حقوق النشر:</strong> © 2025 عثمان مدني. جميع الحقوق محفوظة.
+    </p>
   </div>
 
-  <h1>نظرية الضغط الكوني والاحتواء</h1>
-  <p>تقدم هذه النظرية أن الكون يُحافظ على هيكله من خلال التوازن بين الضغط الداخلي الكوني والقوة المحيطة الخارجية.</p>
-
-  <h2>تصاوير ورسومات</h2>
-  <img src="images/internal-pressure.png" alt="ضغط كوني وانفجار">
-  <img src="images/cpc-layers.png" alt="طبقات الضغط الكوني">
-  <img src="images/cpc-diagrams.png" alt="ميكانيكية الضغط والهيكل">
-
-  <h2>الخلاصة</h2>
-  <p>تفسر النظرية هذه الكون وفق الضغوط والقوى المنظمة ليس فقط وفق الجاذبية. تقدم وجهة نظر جديدة لمفهوم هيكل الكون وحركته.</p>
-
+  <footer>
+    <p>نظرية كونية بديلة لفهم أعظم أسرار الكون</p>
+  </footer>
 </body>
 </html>
