--- a/arabic.html
+++ b/arabic.html
@@ -1,66 +1,138 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>كائناتی الضغط والاحتواء - النظرية الكونية</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>كائناتي الضغط والاحتواء - النظرية الكونية</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f2f2f2;
+      font-family: 'Cairo', sans-serif;
+      background: linear-gradient(135deg, #e0f0ff, #f9fafc);
       margin: 0;
       padding: 0;
       direction: rtl;
+      color: #03314b;
     }
     header {
-      background-color: #004466;
-      color: white;
-      padding: 20px;
+      background: linear-gradient(90deg, #006699, #004466);
+      color: #fff;
+      padding: 30px 20px;
       text-align: center;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.15);
     }
+    header h1 {
+      margin: 0;
+      font-size: 2.8rem;
+      letter-spacing: 2px;
+    }
+    header p {
+      margin-top: 8px;
+      font-size: 1.1rem;
+      font-weight: 600;
+      opacity: 0.85;
+    }
+
     nav {
-      background-color: #006699;
-      padding: 10px;
-      text-align: center;
+      background: #0077cc;
+      padding: 12px 0;
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      flex-wrap: wrap;
     }
     nav a {
       color: white;
-      margin: 0 15px;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 700;
+      padding: 10px 22px;
+      border-radius: 25px;
+      background-color: rgba(255 255 255 / 0.15);
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      font-size: 1.05rem;
+      white-space: nowrap;
     }
     nav a:hover {
-      text-decoration: underline;
+      background-color: #005f99;
+      transform: scale(1.05);
     }
+
     .container {
-      padding: 20px;
-      line-height: 1.8;
-      background-color: white;
       max-width: 900px;
-      margin: auto;
+      background: white;
+      margin: 30px auto 60px auto;
+      padding: 30px 25px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+      line-height: 1.8;
+      color: #0a2a48;
     }
+
     h1, h2, h3 {
       color: #003344;
+      margin-top: 1.3em;
+      margin-bottom: 0.6em;
     }
+    ol {
+      padding-inline-start: 20px;
+      margin-top: 0;
+    }
+    ol li {
+      margin-bottom: 12px;
+      font-size: 1.1rem;
+    }
+
     img {
       display: block;
       max-width: 100%;
-      margin: 20px auto;
-      border: 2px solid #ccc;
-      border-radius: 10px;
+      margin: 25px auto;
+      border-radius: 15px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
     }
+    img:hover {
+      transform: scale(1.05);
+    }
+
+    p {
+      font-size: 1.1rem;
+      margin-bottom: 18px;
+    }
+
     footer {
-      background-color: #004466;
+      background: linear-gradient(90deg, #004466, #002d40);
       color: white;
       text-align: center;
-      padding: 10px;
-      margin-top: 30px;
+      padding: 18px 15px;
+      font-weight: 600;
+      letter-spacing: 0.03em;
+      box-shadow: 0 -3px 8px rgba(0,0,0,0.15);
+      margin-top: 40px;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      nav {
+        flex-direction: column;
+        gap: 15px;
+        padding: 15px 0;
+      }
+      nav a {
+        padding: 12px 18px;
+        font-size: 1.2rem;
+        border-radius: 35px;
+      }
+      .container {
+        margin: 20px 15px 50px 15px;
+        padding: 25px 15px;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>كائناتی الضغط والاحتواء</h1>
+    <h1>كائناتي الضغط والاحتواء</h1>
     <p>نموذج علمي جديد لفهم بنية الكون</p>
   </header>
 
@@ -68,7 +140,7 @@
     <a href="index.html">الرئيسية</a>
     <a href="urdu.html">اردو</a>
     <a href="arabic.html">عربي</a>
-    <a href="about.html">حول</a>
+    <a href="argument.html">الجدل</a>
   </nav>
 
   <div class="container">
@@ -92,9 +164,9 @@
     </ol>
 
     <h2>الصور التوضيحية</h2>
-    <img src="internal-pressure.png" alt="الضغط الداخلي الكوني">
-    <img src="cpc-layers.png" alt="طبقات الاحتواء الكوني">
-    <img src="cpc-diagrams.png" alt="رسومات الضغط والاحتواء">
+    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
+    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
+    <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
 
     <h2>المعادلات النظرية</h2>
     <p><strong>توازن الضغط والاحتواء:</strong> Pi = Fc</p>
@@ -106,8 +178,8 @@
       تقدم نظرية الضغط والاحتواء الكوني بديلاً جديدًا لفهم تمدد واستقرار الكون دون الاعتماد الكامل على الجاذبية. وتفتح الباب أمام نماذج وتجارب جديدة.
     </p>
 
-    <p><strong>الباحث:</strong> عثمان مدني<br>
-      <strong>البريد الإلكتروني:</strong> madniusman13@gmail.com<br>
+    <p><strong>الباحث:</strong> عثمان مدني<br />
+      <strong>البريد الإلكتروني:</strong> madniusman13@gmail.com<br />
       <strong>حقوق النشر:</strong> © 2025 عثمان مدني. جميع الحقوق محفوظة.
     </p>
   </div>
