--- a/arabic.html
+++ b/arabic.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>كائناتي الضغط والاحتواء - النظرية الكونية</title>
+  <title>الضغط والاحتواء الكوني: إطار نظري</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -132,8 +132,8 @@
 </head>
 <body>
   <header>
-    <h1>كائناتي الضغط والاحتواء</h1>
-    <p>نموذج علمي جديد لفهم بنية الكون</p>
+    <h1>الضغط والاحتواء الكوني: إطار نظري</h1>
+    <p>كتابة: عثمان مدني، باحث مستقل، باكستان<br />البريد الإلكتروني: madniusman13@gmail.com</p>
   </header>
 
   <nav>
@@ -144,43 +144,88 @@
   </nav>
 
   <div class="container">
-    <h2>المقدمة</h2>
+    <h2>الملخص</h2>
     <p>
-      تقدم نظرية الضغط والاحتواء الكوني (CPC) تصورًا جديدًا للكون يقوم على توازن بين الضغط الداخلي والاحتواء الخارجي. هذا النموذج يتحدى فكرة أن الجاذبية وحدها تتحكم في تمدد الكون واستقراره.
+      يقدم هذا المقال نظرية "الضغط والاحتواء الكوني" (CPC) التي تستند إلى فكرة أن الكون يحافظ على هيكله من خلال توازن بين الضغط الداخلي وقوة الاحتواء الخارجي. تتحدى هذه النظرية نموذج الجاذبية الوحيد في تفسير تمدد الكون، حركة المجرات، وسلوك الضوء بناءً على الضغط.
     </p>
 
-    <h2>الدلائل العلمية</h2>
+    <h2>١. المقدمة</h2>
+    <p>
+      في علم الكون الحديث، تُفسّر البنية والحركة الكونية عموماً بواسطة قوانين الجاذبية التي تخضع للنظرية النسبية العامة. ومع ذلك، فإن الحقائق المرصودة مثل التوسع المتسارع، أنماط دوران المجرات، واستقرار البنى الكونية الكبيرة، تستدعي نظريات بديلة. تقترح نظرية CPC أن الضغط الكوني، الذي يتوازن مع قوة الاحتواء الخارجي، يتحكم في استقرار الكون ويقدم زاوية نظر جديدة.
+    </p>
+
+    <h2>٢. عشرة أدلة علمية تؤيد نظرية CPC</h2>
     <ol>
-      <li><strong>تمدد الكون:</strong> المجرات تبتعد عن بعضها بسرعة، وهو ما يتناقض مع الجاذبية ويتفق مع وجود ضغط داخلي.</li>
-      <li><strong>استقرار البنية الكونية:</strong> لو كانت الجاذبية فقط فاعلة، لتهاوى الكون، لكننا نلاحظ توازنًا يدل على وجود احتواء منظم.</li>
-      <li><strong>الثقوب السوداء:</strong> وجود حدود لابتلاعها يدل على قوة احتواء تكبح تمددها المطلق.</li>
-      <li><strong>إشعاع الخلفية الكونية:</strong> التماثل فيه يدل على ضغط موحد منتشر في الكون.</li>
-      <li><strong>عدم توازن المادة/ضد المادة:</strong> قد يكون نتيجة تدخل فيزيائي للاحتواء.</li>
-      <li><strong>ضغط الفراغ الكمومي:</strong> يشير تأثير كازيمير إلى وجود طاقة ضغط حتى في الفراغ.</li>
-      <li><strong>قصور نظرية الجاذبية:</strong> لم توحد مع ميكانيكا الكم، ما يفتح المجال لنظرية جديدة تعتمد الضغط.</li>
-      <li><strong>حدود الكون:</strong> تفرض فكرة الاحتواء، فاللامحدودية تتطلب طاقة لا متناهية.</li>
-      <li><strong>تشبيه معماري:</strong> يشبه الكون فقاعة غازية محاطة بجدار يوازن الضغط الداخلي.</li>
-      <li><strong>أنظمة الضغط في الطبيعة:</strong> من الدماغ إلى المحيطات، الضغط مبدأ أساسي في التوازن الطبيعي.</li>
+      <li>التوسع المستمر للكون: لو كانت الجاذبية فقط، لكانت الأجسام تتقارب، لكننا نرى المجرات تتباعد، مما يشير إلى وجود ضغط داخلي.</li>
+      <li>استقرار التوازن الكوني: لو كانت الجاذبية وحدها الفاعلة، لانهيار الكون، لكننا نلاحظ توازناً منظماً.</li>
+      <li>استقرار الثقوب السوداء والنجوم النيوترونية: على الرغم من قوة الجاذبية الكبيرة، فإنها محصورة ضمن نطاقات محددة.</li>
+      <li>تماثل إشعاع الخلفية الكونية: يشير إلى وجود ضغط موحد في جميع أنحاء الكون.</li>
+      <li>عدم التوازن بين المادة والمضادة للمادة: قد يكون بسبب تدخلات فيزيائية للاحتواء.</li>
+      <li>ضغط الفراغ الكمومي: كما يظهر في تأثير كازيمير، توجد طاقة ضغط حتى في الفراغ.</li>
+      <li>قصور نظريات الجاذبية: عدم توحيدها مع ميكانيكا الكم يفتح الباب لنظرية تعتمد الضغط.</li>
+      <li>حدود الكون: فرضية الاحتواء تشير إلى حدود طاقة غير متناهية.</li>
+      <li>التشبيه المعماري: يشبه الكون فقاعة غاز محاطة بجدار يوازن الضغط الداخلي.</li>
+      <li>أنظمة الضغط في الطبيعة: من الدماغ إلى المحيطات، التوازن يعتمد على الضغط.</li>
     </ol>
 
-    <h2>الصور التوضيحية</h2>
-    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
-    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
-    <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
-
-    <h2>المعادلات النظرية</h2>
-    <p><strong>توازن الضغط والاحتواء:</strong> Pi = Fc</p>
-    <p><strong>المسارات المدارية:</strong> P(r) = P0 / (1 + k*r²)</p>
-    <p><strong>التحول الأحمر بفعل التدرج الضغطي:</strong> Δλ ∝ ∇P · d</p>
-
-    <h2>الخاتمة</h2>
+    <h2>٣. انفجار الكون - نهاية نظرية</h2>
     <p>
-      تقدم نظرية الضغط والاحتواء الكوني بديلاً جديدًا لفهم تمدد واستقرار الكون دون الاعتماد الكامل على الجاذبية. وتفتح الباب أمام نماذج وتجارب جديدة.
+      إذا زاد الضغط الداخلي عن الحد الذي يستطيع الاحتواء الخارجي تحمله، قد ينفجر الكون، مما يؤدي إلى تدمير جميع المجرات والمادة.
     </p>
 
-    <p><strong>الباحث:</strong> عثمان مدني<br />
-      <strong>البريد الإلكتروني:</strong> madniusman13@gmail.com<br />
-      <strong>حقوق النشر:</strong> © 2025 عثمان مدني. جميع الحقوق محفوظة.
+    <h2>٤. التأثير الأول - رد فعل البحار</h2>
+    <p>
+      بما أن الماء غير قابل للانضغاط، فإن المحيطات على الأرض ستكون أول من يشعر بشدة هذا الانفجار، وتأثيره سيكون هائلاً.
+    </p>
+
+    <h2>٥. تعليق الأجسام في الفضاء - على أساس الضغط</h2>
+    <p>
+      وفقاً لنظرية CPC، الأجسام لا تبقى معلقة في الفضاء فقط بسبب الجاذبية، بل بسبب توازن قوى الضغط.
+    </p>
+
+    <h2>٦. تأثير الضغط على الضوء</h2>
+    <p>
+      سرعة واتجاه الضوء قد تتأثر بالضغط، مما يقدم تفسيرات جديدة لظواهر مثل الانزياح الأحمر والعدسات الجاذبية.
+    </p>
+
+    <h2>٧. المعادلات النظرية</h2>
+    <p><strong>التوازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</p>
+    <p><strong>الضغط المداري:</strong> Pr(r) = P₀ / (1 + k r²)</p>
+    <p><strong>الانزياح الأحمر بسبب تدرج الضغط:</strong> Δλ ∝ ∇P · d</p>
+
+    <h2>٨. قصور النظريات الرئيسية</h2>
+    <ul>
+      <li>النسبية العامة: لا تشرح التوسع بدون طاقة مظلمة.</li>
+      <li>الجاذبية النيوتونية: تفشل على النطاق الكوني وتتجاهل الضغط.</li>
+      <li>نماذج الطاقة المظلمة: تعتمد على فرضيات غير مرئية.</li>
+      <li>نظرية الأوتار: معقدة ولا تملك أدلة تجريبية.</li>
+    </ul>
+
+    <h2>٩. مزايا نظرية CPC</h2>
+    <ul>
+      <li>تفسير التوسع بدون الحاجة للطاقة المظلمة.</li>
+      <li>خالية من التفردات (singularities).</li>
+      <li>تشابه مع أمثلة حقيقية من الطبيعة.</li>
+    </ul>
+
+    <h2>١٠. الخاتمة</h2>
+    <p>
+      تقدم نظرية الضغط والاحتواء الكوني نموذجاً جديداً لفهم تركيب وحركة الكون يعتمد على الضغط، متفادياً أوجه القصور في نماذج الجاذبية التقليدية.
+    </p>
+
+    <h2>١١. المراجع</h2>
+    <ul>
+      <li>Misner, C. W., Thorne, K. S., & Wheeler, J. A. (1973). Gravitation. W. H. Freeman and Company.</li>
+      <li>Padmanabhan, T. (1993). Structure Formation in the Universe. Cambridge University Press.</li>
+      <li>Peebles, P. J. E. (1993). Principles of Physical Cosmology. Princeton University Press.</li>
+      <li>Riess, A. G., et al. (1998). Observational Evidence from Supernovae for an Accelerating Universe. The Astronomical Journal, 116(3), 1009–1038.</li>
+      <li>Verlinde, E. (2017). Emergent Gravity and the Dark Universe. SciPost Physics, 2(3), 016.</li>
+      <li>Zee, A. (2010). Quantum Field Theory in a Nutshell. Princeton University Press.</li>
+      <li>Weinberg, S. (1972). Gravitation and Cosmology. Wiley.</li>
+    </ul>
+
+    <p style="margin-top:40px; font-weight:600; text-align:center;">
+      © 2025 عثمان مدني — جمیع الحقوق محفوظة
     </p>
   </div>
 
