--- a/arabic.html
+++ b/arabic.html
@@ -74,11 +74,11 @@
       margin-top: 1.3em;
       margin-bottom: 0.6em;
     }
-    ol {
+    ol, ul {
       padding-inline-start: 20px;
       margin-top: 0;
     }
-    ol li {
+    ol li, ul li {
       margin-bottom: 12px;
       font-size: 1.1rem;
     }
@@ -223,6 +223,14 @@
       <li>Zee, A. (2010). Quantum Field Theory in a Nutshell. Princeton University Press.</li>
       <li>Weinberg, S. (1972). Gravitation and Cosmology. Wiley.</li>
     </ul>
+
+    <h2>الصور التوضيحية</h2>
+    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
+    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
+    <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
+    <img src="images/cosmic-balance.png" alt="توازن كوني" />
+    <img src="images/quantum-vacuum.png" alt="ضغط الفراغ الكمومي" />
+    <img src="images/universe-structure.png" alt="هيكل الكون" />
 
     <p style="margin-top:40px; font-weight:600; text-align:center;">
       © 2025 عثمان مدني — جمیع الحقوق محفوظة
