--- a/arabic.html
+++ b/arabic.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>الضغط والاحتواء الكوني: إطار نظري</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Cairo', sans-serif;
+      font-family: 'Amiri', serif;
       background: linear-gradient(135deg, #e0f0ff, #f9fafc);
       margin: 0;
       padding: 0;
@@ -228,9 +228,9 @@
     <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
     <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
     <img src="images/cpc-diagrams.png" alt="رسومات الضغط والاحتواء" />
-    <img src="images/cosmic-balance.png" alt="توازن كوني" />
-    <img src="images/quantum-vacuum.png" alt="ضغط الفراغ الكمومي" />
-    <img src="images/universe-structure.png" alt="هيكل الكون" />
+    <img src="images/cosmic-balance.jpg" alt="توازن كوني" />
+    <img src="images/quantum-vacuum.jpg" alt="ضغط الفراغ الكمومي" />
+    <img src="images/universe-structure.jpg" alt="هيكل الكون" />
 
     <p style="margin-top:40px; font-weight:600; text-align:center;">
       © 2025 عثمان مدني — جمیع الحقوق محفوظة
